# rs-from_primitive

./: Cargo.toml  README.md
src/: from_primitive.rs  lib.rs
